# autovalet

./: .gitignore  README.md  benchmark_results.pkl  default_runner.py  fisheye_camera.py  kalman_filter.py  parkinglot_map_utils.py  plotting.py  pyproject.toml  requirements.txt  run_scenario.sh  run_vla.sh  runner_test_medium copy.py  runner_test_medium.py  runner_test_medium_static.py  scenario_utils.py  test.py  test_door_logic_mock.py  v2 copy most recent.py  v2.py  v2_camera_config.json  v2_controller.py  v2_copy_march_4.py  v2_experiment.py  v2_experiment_utils.py  v2_perception.py  v2_simple.py  v2_static.py
backup_tests/: runner_test.py  runner_test_2_working.py  runner_test_4.py  runner_test_5.py  v2 copy.py  v2 copy_march_4_2026.py  v2_backup.py  v2_new.py
backup_tests/backups/: runner_test_2_1.py  runner_test_2_door_branch.py  runner_test_3.py
bash_scripts/: run_benchmark.sh  run_scenario.sh  run_test.sh  run_vla.sh
camera_test/: run_camera_test.py
diffusion_adapter/: DESIGN_DOC.txt  adapter.py  agent_interface.py  benchmark.py  diff_adapter.py  test.py  v2_diffusion.py
diffusion_adapter/checkpoints/: args.json
diffusion_adapter/test/: conftest.py  run_door_test.sh  test_agent_pipeline.py  test_bearing_anchor.py  test_carla_parking_fix.py  test_carla_suppression.py  test_coords.py  test_door_safety_metric.py  test_ego_state.py  test_guidance.py  test_guidance_lshaped.py  test_guidance_suppression.py  test_heading_norm.py  (+10 more)
diffusion_planner/: benchmark.py  diffusion_planner.py  v2_diffusion.py
hybrid_a_star/: car.py
parking_scenarios/: config.py  opposite_vehicle_parking.py  parking_cone.py  parking_scenario.py  parking_scenario_easy.py  parking_scenario_hard.py  parking_scenario_medium.py  parking_scenario_v2.py  pedestrian_crossing_parking copy.py  pedestrian_crossing_parking.py  smart_pedestrian_crossing_parking.py  vehicle_opens_door_parking.py
simlingo_patches/: simlingo.patch
testbed/: recording_utils.py  v2_experiment_utils.py  v2_experiment_utils_static.py
testbed_tests/: conftest.py  test_astar_offsets.py  test_collect_data_axes.py  test_collect_data_transforms.py  test_collision_mask.py  test_integration_collision.py  test_integration_cone_spawn.py  test_integration_dynamic_collisions.py  test_integration_pedestrian_spawn.py  test_integration_production_pipeline.py  test_integration_scenario_actors.py  test_integration_spawning.py  test_iou.py  test_near_miss.py  test_obb_collision.py  test_spawn_config.py  test_walker_state.py
vla_adapter/: agent_adapter.py  agent_interface.py  agent_interface_pid.py  benchmark.py  benchmark_latency.py  carla_environment.yml  load_models.sh  run_latency_benchmark.sh  v2.py  v2_experiment_utils.py  validate_episodes.py
(+47 files in other folders)
