[project]
name = "autovalet-parking-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "carla>=0.9.15",
    "imageio[pyav]>=2.37.0",
    "mmcv-full==1.6.0",
    "mmdet==2.28.0",
    "mmdet3d==1.0.0rc6",
    "mmsegmentation==0.30.0",
    "numpy==1.21.6",
    "open3d==0.18.0",
    "pykalman>=0.10.1",
    "setuptools==69.5.1",
    "torch==1.11.0+cu113",
    "torchaudio==0.11.0+cu113",
    "torchvision==0.12.0+cu113",
    "wheel==0.43.0",
]

[tool.uv]
override-dependencies = [
    "numba==0.55.0",
    "networkx==2.7"
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
