[project]
name = "autovalet-parking-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    # ML stack — torch from pytorch cu121 index below
    "torch==2.2.0+cu121",
    "torchaudio==2.2.0+cu121",
    "torchvision==0.17.0+cu121",
    "pytorch-lightning==2.4.0",
    "transformers==4.46.3",
    "accelerate==1.0.1",
    "peft==0.13.2",
    "deepspeed==0.16.2",
    "timm==0.9.16",
    "safetensors==0.5.2",
    "einops==0.7.0",
    # flash-attn: install separately via requirements.txt (pre-built wheel)
    # carla: install separately from CARLA binary wheel (see requirements.txt)

    # Logging / config
    "wandb==0.27.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "mmengine==0.10.7",

    # CARLA / simulation
    "py-trees==0.8.3",

    # Vision / geometry
    "opencv-python==4.11.0.86",
    "imageio==2.37.3",
    "av==17.0.0",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "scikit-learn==1.3.2",
    "scikit-image==0.25.2",
    "shapely==2.1.2",
    "geopandas==1.1.3",
    "matplotlib==3.8.4",
    "pandas==2.3.3",
    "pillow==10.2.0",
    "imgaug==0.4.0",

    # Utilities
    "pykalman==0.11.2",
    "pyquaternion==0.9.9",
    "filterpy==1.4.5",
    "addict==2.4.0",
    "yapf==0.43.0",
    "tqdm==4.67.3",
    "huggingface-hub==0.27.0",
    "tokenizers==0.20.3",
    "line-profiler==5.0.2",
    "pytest==9.0.3",
    "gitpython==3.1.50",
    "pydot==4.0.1",
    "protobuf==7.34.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a live CARLA server on localhost:2000",
]
